# kolmogorov-stack

./: .env.example  .gitattributes  .gitignore  AGENT_GUIDE.md  DEMO.md  Dockerfile  LICENSE  README.md  STRATEGY-v3.md  STRATEGY.md  classifier.spec.json  court-ext.spec.json  email-prio.spec.json  package-lock.json  package.json  phi-redactor.spec.json  seeds.jsonl  server.js  vercel.json  wave58-test.kolm  wave58-test.spec.json  zh-greeter.kolm  zh-greeter.md  zh-greeter.spec.json  zh-seeds.jsonl
_audit/: counsel_personas_v1.md  counsel_results_v1.md  seo_v1.md  synthesis_v1.md
api/: cf-config.js  index.js  r2.js
archive/: economics.html  optimize.html  receipts.html  spec.html  specialists.html  why.html
bench/: Dockerfile
cli/: kolm-tui.mjs  kolm.js
docs/: AUTHORING.md  EVOLVE.md  HOOKS.md  PRODUCT.md  RAG.md  SOTA-2026-05-11.md  SOTA-amendments-2026-05-11.md  TUNE.md  audit-wave99-2026-05-16.md  benchmark-results-v0.1.0.md  kolm-brand-system-2026-05-06.md  kolm-infra-business-strategy-report-2026-05-06.md  kolm-yaml-v0.1.json  manifest-v0.1.json  positioning-healthcare-2026-05-14.md  receipt-v0.1.json  rs-1.md  sim-100-feedback-2026-05-11.md  sim-100-v7-8-rerated-2026-05-11.md
examples/: classify-formality.json  classify-intent.json  classify-issue-type.json  classify-language.json  classify-priority.json  classify-toxicity.json  count-chars.json  count-words.json  detect-pii.json  extract-dates.json  extract-emails.json  extract-ipv4.json  extract-phones.json  extract-prices.json  extract-urls.json  is-affirmative.json  is-command.json  is-greeting.json  is-positive-review.json  is-question.json  is-spam.json  is-thank-you.json  is-urgent.json  mentions-money.json  mentions-time.json  sentiment.json
holdouts/: catalog.json
md-links-test/: md-links.kolm  md-links.md  package-lock.json  package.json  recipe.js  sample.json  spec.json  test1.json  test2.json  test3.json
phone-validator/: phone-validator.kolm  phone-validator.md  recipe.js  sample1.json  sample2.json  sample3.json  spec.json
public/: 404.html  500.html  _404.html  account.html  admin.html  agents.html  airgap.html  anatomy.html  api.html  app.js  architecture.html  ask.html  audit-log.html  audit.html  baa.html  badge.html  benchmarks.html  bounties.html  bounty.html  brand-refresh.css  brand.html  build-your-own.html  builder.html  byoc.html  (+155 more)
sdk/python/: README.md  pyproject.toml
sdk/python/recipe/: __init__.py  cli.py  client.py  shortcuts.py
sdk/python/tests/: test_sdk.py
(+915 files in other folders)
