[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kolmogorov-recipe"
version = "0.1.0"
description = "Recipe — show your AI agent how once, run forever. Synthesize deterministic JS classifiers from 4-8 examples; replace repeat LLM-as-judge calls."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "REM Labs", email = "dev@remlabs.ai" }]
keywords = ["llm", "classifier", "synthesis", "agents", "claude", "openai", "fine-tuning", "lora"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://kolmogorov-stack-production.up.railway.app"
Repository = "https://github.com/remlabs-ai/kolmogorov-stack"
Documentation = "https://kolmogorov-stack-production.up.railway.app/docs"

[project.scripts]
recipe = "recipe.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["recipe*"]
