[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kolm"
version = "0.2.0"
description = "kolm - the AI compiler. Compile any AI task into a signed .kolm file you own. Python client over the public HTTP API."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [{ name = "Kolmogorov", email = "dev@kolm.ai" }]
keywords = ["llm", "compiler", "lora", "agents", "claude", "openai", "fine-tuning", "edge", "offline"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://kolm.ai"
Repository = "https://github.com/sneaky-hippo/kolmogorov-stack"
Documentation = "https://kolm.ai/docs"

[project.scripts]
recipe = "recipe.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kolm*", "recipe*"]
